Quickly fixing a border-size issue. On tablet and mobile landscape, the border looked too big.  I reduced the border-size down to 4px in landscape view for tablet. comitting changes and pushing to gitHub. -Michael De La Riva

--- a/index.css
+++ b/index.css
@@ -138,10 +138,12 @@
     }
     .container .linkSection .buttonContainer .singleElBtn{
         padding: 1rem;
+        border: 4px solid white;
     }
     .container .linkSection .buttonContainer .button{
         padding: 1rem 3rem 1rem 1rem;
         margin: 1rem 0 0 1rem;
+        border: 4px solid white;
     }
 }
 
